Modifica su Show.html

--- a/typo3conf/ext/simpleblog/Resources/Private/Templates/Blog/Show.html
+++ b/typo3conf/ext/simpleblog/Resources/Private/Templates/Blog/Show.html
@@ -1,7 +1,7 @@
 <f:layout name="default" />
 <f:section name="content">
     <h1>I miei Blog</h1>
-    <f:form action="list" additionalAttributes="{role:'form'}">
+    <f:form action="show" additionalAttributes="{role:'form'}">
         <div class="form-inline">
             <div class="form-group">
                 <f:form.textfield name="search" value="{search}" class="form-control" />
