--- a/typo3conf/ext/simpleblog/Resources/Private/Partials/Blog/Form.html
+++ b/typo3conf/ext/simpleblog/Resources/Private/Partials/Blog/Form.html
@@ -1,5 +1,5 @@
 <h1>{intestazione}</h1>
-<f:form action="{azione}}" object="{blog}" name="blog" additionalAttributes="{role:'form'}">
+<f:form action="{azione}" object="{blog}" name="blog" additionalAttributes="{role:'form'}">
     <div class="form-group">
         <label>Titolo blog</label>
         <f:form.textfield property="title" class="form-control" />
