--- a/typo3conf/ext/simpleblog/Resources/Private/Templates/Blog/Create.html
+++ b/typo3conf/ext/simpleblog/Resources/Private/Templates/Blog/Create.html
@@ -1,6 +1,6 @@
 <f:layout name="default" />
 <f:section name="content">
     <div class="container">
-        <f:render partial="Blog/Form" arguments="{intestazione:'Aggiungere un nuovo blog', azione:'add', messaggioinvio:'Crea il blog!', blog:blog}" />
+        <f:render partial="Blog/Form" arguments="{intestazione:'Aggiungere un nuovo blog', azione:'save', messaggioinvio:'Crea il blog!', blog:blog}" />
     </div>
 </f:section>
