Commit ok del 30122020 - pg.246

--- a/typo3conf/ext/simpleblog/Resources/Private/Templates/Blog/Display.html
+++ b/typo3conf/ext/simpleblog/Resources/Private/Templates/Blog/Display.html
@@ -8,6 +8,19 @@
             <dt>Descrizione blog:</dt>
             <dd>{blog.description}</dd>
         </dl>
+        <f:if condition="{blog.posts}">
+            <ul class="list-group">
+                <f:for each="{blog.posts}" as="post">
+                    <li class="list-group-item">{post.title}
+                        <f:link.action action="deleteConfirm" controller="Post" arguments="{blog:blog, post:post}" class="btn btn-primary btn-xs pull-right">DEL</f:link.action>
+                        <f:link.action action="updateForm" controller="Post" arguments="{blog:blog, post:post}" class="btn btn-primary btn-xs pull-right margin-right">EDIT</f:link.action>
+                        <f:link.action action="show" controller="Post" arguments="{blog:blog, post:post}" class="btn btn-primary btn-xs pull-right margin-right">SHOW</f:link.action>
+                    </li>
+                </f:for>
+            </ul>
+        </f:if>
+        <f:link.action action="addForm" controller="Post" arguments="{blog:blog}" class="btn btn-primary">Aggiungi Post</f:link.action>
+        <br><br>
         <f:link.action action="show" class="btn btn-primary">Torna all'elenco blog</f:link.action>
     </div>    
 </f:section>
