Commit del 31122020 Linux - pg.226

--- a/typo3conf/ext/simpleblog/Resources/Private/Partials/Blog/Form.html
+++ b/typo3conf/ext/simpleblog/Resources/Private/Partials/Blog/Form.html
@@ -1,4 +1,7 @@
 <h1>{intestazione}</h1>
+<div class="alert alert-danger">
+    <f:render partial="Error" arguments="{object:'blog'}" />
+</div>
 <f:form action="{azione}" object="{blog}" name="blog" additionalAttributes="{role:'form'}">
     <div class="form-group">
         <label>Titolo blog</label>
